# CPU_emulator

./: CMakeLists.txt  CPU.h  bite_code.txt  factorial.txt  factorial_reccursive.txt  iterator.txt  main.cpp  prog.txt  stack.h  tests.cpp
